adding fields to UI grids, and setting title as owner name and adding country filter for each tab (rate and code)
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40685

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SalePriceListChange/Templates/SalePriceListCodeChangeTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SalePriceListChange/Templates/SalePriceListCodeChangeTemplate.html
@@ -3,13 +3,15 @@
              dataretrievalfunction="dataRetrievalFunction"
              pagingtype="'PagingOnScroll'"
              idfield="Code">
+    <vr-datagridcolumn headertext="'Zone'" field="'ZoneName'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Code'" field="'Code'" type="'Text'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Zone Name'" field="'ZoneName'" type="'Text'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'BED'" field="'BED'" type="'Date'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'EED'" field="'EED'" type="'Date'"></vr-datagridcolumn>
     <vr-datagridcolumn fixedwidth="'35'">
         <vr-icon icontype="dataItem.CodeChangeTypeIconType" iconurl="dataItem.CodeChangeTypeIcon"
                  tooltip="dataItem.CodeChangeTypeIconTooltip" inline>
         </vr-icon>
     </vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Recent Zone'" field="'RecentZoneName'" type="'Text'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'BED'" field="'BED'" type="'Date'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'EED'" field="'EED'" type="'Date'"></vr-datagridcolumn>
+
 </vr-datagrid>
