--- a/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Views/AccountStatement/AccountStatementManagement.html
+++ b/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Views/AccountStatement/AccountStatementManagement.html
@@ -7,7 +7,7 @@
                                                         isrequired="true" hideremoveicon></vr-accountbalance-accounttype-selector>
                 <vr-accountbalance-account-selector on-ready="scopeModel.onAccountDirectiveReady" normal-col-num="2" ng-if="scopeModel.accountType!=undefined" isrequired="true"></vr-accountbalance-account-selector>
                 <vr-columns width="normal" ng-show="scopeModel.accountType">
-                    <vr-datetimepicker type="date" label="From" value="scopeModel.fromDate" isrequired="true"></vr-datetimepicker>
+                    <vr-datetimepicker type="datetime" label="From" value="scopeModel.fromDate" isrequired="true"></vr-datetimepicker>
                 </vr-columns>
             </vr-row>
         </div>
