--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/DID/Templates/DIDSynchronizerEditor.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/DID/Templates/DIDSynchronizerEditor.html
@@ -1,1 +1,6 @@
-﻿
+﻿<vr-columns width="1/2row">
+    <vr-genericdata-businessentitydefinition-selector on-ready="scopeModel.onAccountDefinitionSelectorReady"
+                                                      customlabel="Account Definition"
+                                                      isrequired="true">
+    </vr-genericdata-businessentitydefinition-selector>
+</vr-columns>
