Implemented the block and email actions
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40704

--- a/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Web/WhS_AccountBalance/Elements/FinancialAccount/Directives/BE_Definition/Templates/AccountDefinitionBEEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Web/WhS_AccountBalance/Elements/FinancialAccount/Directives/BE_Definition/Templates/AccountDefinitionBEEditor.html
@@ -1,1 +1,9 @@
-﻿
+﻿<vr-tab header="'Settings'">
+    <vr-row removeline>
+        <vr-accountbalance-accounttype-selector on-ready="scopeModel.onAccountTypeSelectorReady"
+                                                normal-col-num="{{ctrl.normalColNum}}"
+                                                isrequired="ctrl.isrequired"
+                                                hideremoveicon>
+        </vr-accountbalance-accounttype-selector>
+    </vr-row>
+</vr-tab>
