Refactored minor issues
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40705

--- a/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Views/BusinessEntityDefinitionEditor/BusinessEntityDefinitionEditor.html
+++ b/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Views/BusinessEntityDefinitionEditor/BusinessEntityDefinitionEditor.html
@@ -24,7 +24,8 @@
                                      ng-if="scopeModel.selectedSetingsTypeConfig != undefined"
                                      directive="scopeModel.selectedSetingsTypeConfig.Editor"
                                      on-ready="scopeModel.onSettingDirectiveReady"
-                                     normal-col-num="4">
+                                     normal-col-num="4"
+                                     isrequired="true">
                 </vr-directivewrapper>
             </vr-tabs>
         </vr-form>
