--- a/Vanrise/Code/Vanrise.BEBridge.Web/VR_BEBridge/Directives/ProcessInput/Scheduled/Templates/BEBridgeProcessScheduledTemplate.html
+++ b/Vanrise/Code/Vanrise.BEBridge.Web/VR_BEBridge/Directives/ProcessInput/Scheduled/Templates/BEBridgeProcessScheduledTemplate.html
@@ -3,7 +3,7 @@
         <vr-bebridge-berecievedefinition-selector on-ready="onBERecieveDefintionSelectorReady"
                                                   selectedvalues="selectedBERecieveDefintion"
                                                   isrequired="true"
-                                                  label="BE Recieve Definition"
+                                                  label="BE Receive Definition"
                                                   ismultipleselection
                                                   hideremoveicon>
         </vr-bebridge-berecievedefinition-selector>
