--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SalePriceList/Templates/SalePriceListGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SalePriceList/Templates/SalePriceListGridTemplate.html
@@ -6,8 +6,7 @@
              idfield="Entity.PriceListId" defaultsortbyfieldname="'Entity.PriceListId'" defaultsortdirection="'DESC'" enableautoexport="true">
 
     <vr-datagridcolumn headertext="'ID'" field="'Entity.PriceListId'" type="'Text'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Owner Type'" field="'OwnerType'" type="'Text'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Owner Name'" field="'OwnerName'" type="'Text'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Customer Name'" field="'OwnerName'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Created Time'" field="'Entity.CreatedTime'" type="'Datetime'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Currency'" field="'CurrencyName'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Pricelist Type'" field="'PriceListTypeName'" type="'Text'"></vr-datagridcolumn>
