--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SalePriceList/SalePricelist.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SalePriceList/SalePricelist.html
@@ -1,38 +1,18 @@
-﻿<vr-panel ng-controller="WhS_BE_SalePricelistController" >
+﻿<vr-panel ng-controller="WhS_BE_SalePricelistController">
     <vr-form name="formFilter">
         <div ng-hide="filterSectionCollapsed" vr-loader="isLoadingFilter">
             <vr-row removeline>
-                <vr-columns width="normal">
-                    <vr-select label="Owner Type"
-                               datasource="ownerTypes"
-                               selectedvalues="selectedOwnerType"
-                               onselectionchanged="onOwnerTypeChanged"
-                               datavaluefield="value"
-                               datatextfield="description"
-                               entityname="Owner Type"
-                               hideremoveicon isrequired="false">
-                    </vr-select>
-                </vr-columns>
-                <span ng-show="showSellingProductSelector">
-                    <vr-whs-be-sellingproduct-selector on-ready="onSellingProductSelectorReady"
-                                                       selectedvalues="selectedSellingProduct"
-                                                       ismultipleselection
-                                                       onselectionchanged="onSellingProductChanged"
-                                                       normal-col-num="2"
-                                                       hideremoveicon isrequired="isRequiredSellingProductSelector">
-                    </vr-whs-be-sellingproduct-selector>
-                </span>
-                <span ng-show="showCarrierAccountSelector">
-                    <vr-whs-be-carrieraccount-selector on-ready="onCarrierAccountSelectorReady"
-                                                       normal-col-num="2"
-                                                       ismultipleselection
-                                                       selectedvalues="selectedCustomer"
-                                                       onselectionchanged="onCarrierAccountChanged"
-                                                       getcustomers
-                                                       hideremoveicon isrequired="isRequiredCarrierAccountSelector">
+                <vr-whs-be-carrieraccount-selector on-ready="onCarrierAccountSelectorReady"
+                                                   normal-col-num="2"
+                                                   selectedvalues="selectedCustomer"
+                                                   onselectionchanged="onCarrierAccountChanged"
+                                                   getcustomers
+                                                   hideremoveicon isrequired="isRequiredCarrierAccountSelector">
 
-                    </vr-whs-be-carrieraccount-selector>
-                </span>
+                </vr-whs-be-carrieraccount-selector>
+                <vr-columns width="normal">
+                    <vr-datetimepicker type="date" label="Creation Date" value="CreationDate"></vr-datetimepicker>
+                </vr-columns>
             </vr-row>
         </div>
         <vr-row removeline>
@@ -44,10 +24,7 @@
         </vr-row>
         <vr-row>
             <vr-columns width="fullrow">
-
                 <vr-whs-be-salepricelist-grid on-ready="onGridReady"></vr-whs-be-salepricelist-grid>
-
-                
             </vr-columns>
         </vr-row>
     </vr-form>
