3431 - Add test email
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40728

--- a/Vanrise/Code/Vanrise.Common.Web/Common/Directives/EmailTemplate/Templates/EmailTemplateSettings.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Directives/EmailTemplate/Templates/EmailTemplateSettings.html
@@ -16,3 +16,7 @@
 <vr-columns width="1/2row">
     <vr-switch value="ssl" label="SSL" isrequired></vr-switch>
 </vr-columns>
+<vr-columns width="1/2row" withemptyline>
+    <vr-label>Send Test Email:</vr-label>
+    <vr-button type="SendEmail" data-onclick="sendEmail" standalone></vr-button>
+</vr-columns>
