--- a/Vanrise/Code/Vanrise.Common.Web/Common/Views/TestEmail/TestEmailEditor.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Views/TestEmail/TestEmailEditor.html
@@ -8,7 +8,7 @@
                 <vr-columns width="1/2row">
                     <vr-textbox value="subject" label="Subject" isrequired="true"></vr-textbox>
                 </vr-columns>
-                <vr-columns width="1/2row">
+                <vr-columns width="fullrow">
                     <vr-textarea value="body" label="Body" isrequired="true"></vr-textarea>
                 </vr-columns>
             </vr-row>
