--- a/Retail/Code/Retail.Zajil.Web/Retail_Zajil/Views/OrderDetail/OrderDetailEditor.html
+++ b/Retail/Code/Retail.Zajil.Web/Retail_Zajil/Views/OrderDetail/OrderDetailEditor.html
@@ -3,6 +3,9 @@
         <vr-form validationcontext="orderDetailEditorGroup">
             <vr-row>
                 <vr-columns width="1/2row">
+                    <vr-textbox value="scopeModel.orderId" isrequired="true" label="Service Order Id"></vr-textbox>
+                </vr-columns>
+                <vr-columns width="1/2row">
                     <vr-textbox value="scopeModel.charges" isrequired="true" label="Charges"></vr-textbox>
                 </vr-columns>
                 <vr-columns width="1/2row">
