Implementing customer sent email and financial account object type
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40734

--- a/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Web/WhS_AccountBalance/Elements/AccountBalanceActions/SendCustomerEmailAction/Directives/Templates/SendCustomerEmailAction.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Web/WhS_AccountBalance/Elements/AccountBalanceActions/SendCustomerEmailAction/Directives/Templates/SendCustomerEmailAction.html
@@ -1,14 +1,14 @@
 ﻿<vr-row>
-    <vr-columns colnum="{{ctrl.normalColNum}}">
+    <vr-columns colnum="6">
         <vr-common-mailmessagetemplate-selector on-ready="scopeModel.onAccountMailMessageTemplateSelectorReady"
                                                 customlabel="Account Mail Message Template"
-                                                isrequired="ctrl.isrequired">
+                                                isrequired="true">
         </vr-common-mailmessagetemplate-selector>
     </vr-columns>
-    <vr-columns colnum="{{ctrl.normalColNum}}">
+    <vr-columns colnum="6">
         <vr-common-mailmessagetemplate-selector on-ready="scopeModel.onProfileMailMessageTemplateSelectorReady"
                                                 customlabel="Profile Mail Message Template"
-                                                isrequired="ctrl.isrequired">
+                                                isrequired="true">
         </vr-common-mailmessagetemplate-selector>
     </vr-columns>
 </vr-row>
