--- a/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Web/WhS_AccountBalance/Elements/AccountBalanceActions/SendCustomerEmailAction/Directives/Templates/SendCustomerEmailActionDefinition.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Web/WhS_AccountBalance/Elements/AccountBalanceActions/SendCustomerEmailAction/Directives/Templates/SendCustomerEmailActionDefinition.html
@@ -1,8 +1,14 @@
 ﻿<vr-row>
     <vr-columns colnum="{{ctrl.normalColNum}}">
-        <vr-common-mailmessagetype-selector on-ready="scopeModel.onMailMessageTypeSelectorReady"
-                                            normal-col-num="{{ctrl.normalColNum}}"
-                                            isrequired="ctrl.isrequired">
+        <vr-common-mailmessagetype-selector on-ready="scopeModel.onAccountMailMessageTypeSelectorReady"
+                                            isrequired="true"
+                                            customlabel="Account Mail Message Type">
+        </vr-common-mailmessagetype-selector>
+    </vr-columns>
+    <vr-columns colnum="{{ctrl.normalColNum}}">
+        <vr-common-mailmessagetype-selector on-ready="scopeModel.onProfileMailMessageTypeSelectorReady"
+                                            isrequired="true"
+                                            customlabel="Profile Mail Message Type">
         </vr-common-mailmessagetype-selector>
     </vr-columns>
 </vr-row>
