--- a/Vanrise/Code/Vanrise.Common.Web/Common/Views/TestEmail/TestEmailEditor.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Views/TestEmail/TestEmailEditor.html
@@ -9,7 +9,7 @@
                     <vr-textbox value="subject" label="Subject" isrequired="true"></vr-textbox>
                 </vr-columns>
                 <vr-columns width="fullrow">
-                    <vr-textarea value="body" label="Body" isrequired="true"></vr-textarea>
+                    <vr-textarea value="body" label="Body"></vr-textarea>
                 </vr-columns>
             </vr-row>
         </vr-form>
