--- a/Vanrise/Code/Vanrise.Web/Client/CSViews/Home/Index.cshtml
+++ b/Vanrise/Code/Vanrise.Web/Client/CSViews/Home/Index.cshtml
@@ -18,8 +18,8 @@
     @Styles.Render("~/Content/Themes")
 </head>
 <body>
-    <div ng-show="spinner" class="loading-container"><img src="Client/Images/loader-mask.gif" /></div>
-    <div ng-hide="spinner" ng-cloak>
+    <div ng-if="spinner" class="loading-container"><img src="Client/Images/loader-mask.gif" /></div>
+    <div ng-if="!spinner" ng-cloak>
         <nav class="navbar navbar-inverse navbar-fixed-top vr-nav-custom">
             <div class="container">
                 <div class="navbar-header">
@@ -70,7 +70,7 @@
             <!-- Sidebar -->
             <div id="sidebar-wrapper" style="overflow-x:hidden;" ng-style="toogled==true?{'width':'200px'}:{'width':'0px'}">
 
-                <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true" ng-show="toogled==true" ng-mouseout="mouseout()" ng-mouseover="mouseover()">
+                <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true" ng-if="toogled==true" ng-mouseout="mouseout()" ng-mouseover="mouseover()">
                     <div class="panel panel-default toggle-panel ">
                         <div class="panel-heading dll-menu" style="height: 36px;">
                             <span class=" hand-cursor glyphicon glyphicon glyphicon-pushpin " style="font-size: 17px; margin: 6px 4px; position: absolute; right: -1px; top:5px;" ng-click="pinpanel()" ng-class="pinned==true?'unpined-icon':''"></span>
@@ -78,10 +78,10 @@
                         </div>
                     </div>
                     <div class="panel panel-default menu-item-list" ng-repeat="item in menuItems" ng-class="$index == menuItems.length -1 ? 'last': '' ">
-                        <div ng-class="item.isSelected? 'bold-item bgcolor-grad-{{item.keyclass}}':'bgcolor-{{item.keyclass}}'" class="panel-heading panel-heading-vr hand-cursor   boxes float-box waves-effect  waves-block dll-menu-theme" data-parent="#accordion" ng-click="setIndex(item)" aria-expanded="true">
+                        <div ng-class="item.isSelected? 'bold-item bgcolor-grad-{{::item.keyclass}}':'bgcolor-{{::item.keyclass}}'" class="panel-heading panel-heading-vr hand-cursor   boxes float-box waves-effect  waves-block dll-menu-theme" ng-click="setIndex(item)">
 
                             <span ng-if="item.Childs.length > 0">
-                                <span class="glyphicon " style="top: -4px; "><img ng-src="{{item.Icon}}" /></span>
+                                <span class="glyphicon " style="top: -4px; "><img ng-src="{{::item.Icon}}" /></span>
                                 <span class="vr-module-name" title="{{::item.Name}}">{{::item.Name}}</span>
                                 <span class=" hand-cursor  toggel">
                                     <span ng-if="item.Childs.length>0" class="glyphicon " ng-class="menuItemsCurrent.Id == item.Id ?'glyphicon-chevron-up':'glyphicon-chevron-down'" style="font-size: 10px; top: 7px;"></span>
@@ -93,26 +93,24 @@
                                     <a class="menulink  " ng-href="{{::item.Location}}" ng-click="logfunc()">{{::item.Name}}</a>
                                 </li>
                             </ul>
-
                         </div>
-                        <div id="collapse-{{item.Id}}" ng-class=" menuItemsCurrent.Id == item.Id ?'am-collapse':menuItemsCurrent.Id==null ? 'am-collapse':''" ng-show=" menuItemsCurrent.Id == item.Id ">
+                        <div id="collapse-{{::item.Id}}" ng-if="menuItemsCurrent.Id == item.Id " class="slideanimation">
                             <div class="panel-body">
                                 <div ng-repeat="c in item.Childs">
                                     <ul class="nav">
                                         <li ng-if="c.Childs == null " class="waves-effect waves-classic dll-menu menu-item-list-ligth " ng-class="c.isSelected?'selected-node':''">
-                                            <a class="menulink " ng-class="c.isSelected?'selected-url':''" ng-href=" {{::c.Location}} ">{{::c.Name}} </a>
+                                            <a class="menulink " ng-class="c.isSelected?'selected-url':''" ng-href="{{::c.Location}}">{{::c.Name}} </a>
                                         </li>
                                     </ul>
                                     <div ng-if="c.Childs.length > 0" class="dll-parent-menu menu-item-list-ligth">
                                         <div class="menulink waves-effect waves-block" ng-class="menusubItemsCurrent.Id == c.Id  ? 'down selected-url ':''" ng-click="setIndexSub(c)">{{::c.Name}}</div>
-                                        <ul style="padding-left:15px" class="nav" ng-show="menusubItemsCurrent.Id == c.Id">
+                                        <ul style="padding-left:15px" class="nav slideanimation" ng-if="menusubItemsCurrent.Id == c.Id" >
                                             <li ng-repeat="a in c.Childs" class="waves-effect waves-classic inner-list-item" ng-class="a.isSelected?'selected-node':''">
                                                 <a class="menulink" style="color:#333;" ng-class="a.isSelected?'selected-url':''" ng-href="{{::a.Location}}">{{::a.Name}}</a>
                                             </li>
                                         </ul>
                                     </div>
                                 </div>
-
                             </div>
                         </div>
                     </div>
@@ -125,7 +123,7 @@
 
                 </div>
 
-                <div id="collapsedmenu" style="background-color: #ddd; height: 100%; width: 40px; position: fixed;" ng-show="toogled==false">
+                <div id="collapsedmenu" style="background-color: #ddd; height: 100%; width: 40px; position: fixed;" ng-if="toogled==false">
                     <div class="dropdown dropdown-custom-serf leftdiv">
                         <div class="dropdown-toggle dropdown-item" style="font-size: 17px;top:9px;left:5px;display:block">
                             <span class=" hand-cursor glyphicon glyphicon glyphicon-pushpin " ng-class="pinned==true?'unpined-icon':''" style="font-size: 17px !important;top: 8px;left: 10px;" ng-click="pinpanel()"></span>
@@ -133,11 +131,11 @@
                         </div>
                     </div>
                     <div ng-mouseout="mouseout()" ng-mouseover="mouseover()">
-                        <div ng-repeat="item in menuItems" class="dropdown dropdown-custom-serf leftdiv " ng-class="item.isSelected? 'bgcolor-grad-{{item.keyclass}}':'bgcolor-{{item.keyclass}}'" ng-mouseenter="showMenu($event)" ng-mouseleave="hideMenu($event)">
-                            <div class="dropdown-toggle hand-cursor glyphicon dll-menu-theme dropdown-item" id="dropdownMenuCu-{{$index}}" style="top: 5px;" aria-expanded="true" data-toggle="dropdown">
-                                <img ng-src="{{item.Icon}}" />
+                        <div ng-repeat="item in menuItems" class="dropdown dropdown-custom-serf leftdiv " ng-class="item.isSelected? 'bgcolor-grad-{{::item.keyclass}}':'bgcolor-{{::item.keyclass}}'" ng-mouseenter="showMenu($event,item.Id)" ng-mouseleave="hideMenu($event)">
+                            <div class="dropdown-toggle hand-cursor glyphicon dll-menu-theme dropdown-item" id="dropdownMenuCu-{{::$index}}" style="top: 5px;" aria-expanded="true" data-toggle="dropdown">
+                                <img ng-src="{{::item.Icon}}" />
                             </div>
-                            <ul class="dropdown-menu dropdown-menu-custom-serf" role="menu" aria-labelledby="dropdownMenuCu-{{$index}}">
+                            <ul class="dropdown-menu dropdown-menu-custom-serf" role="menu" aria-labelledby="dropdownMenuCu-{{::$index}}" ng-if="currentMenuIndex==item.Id">
                                 <li class="title-groupe" role="presentation">
                                     <label class="title-label"> {{::item.Name}}</label>
                                 </li>
