Implementing AccountBalance Notification Pages (Definition and Runtime)
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40763

--- a/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Directives/AccountBalanceNotification/Templates/AccountBalanceNotificationBodyEditor.html
+++ b/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Directives/AccountBalanceNotification/Templates/AccountBalanceNotificationBodyEditor.html
@@ -1,3 +1,2 @@
-﻿<vr-accountbalance-notifications-grid on-ready="scopeModel.onGridReady">
-
-</vr-accountbalance-notifications-grid>
+﻿
+<vr-accountbalance-notifications-grid on-ready="scopeModel.onGridReady"></vr-accountbalance-notifications-grid>
