--- a/Vanrise/Code/Vanrise.Notification.Web/VR_Notification/Directives/VRNotification/Templates/VRNotificationComponentTypeSettingsTemplate.html
+++ b/Vanrise/Code/Vanrise.Notification.Web/VR_Notification/Directives/VRNotification/Templates/VRNotificationComponentTypeSettingsTemplate.html
@@ -13,7 +13,7 @@
     <vr-tab header="'Settings'">
         <vr-row>
             <vr-notification-vrnotifivationtype-settings on-ready="scopeModel.onVRNotificationTypeSettingsSelectorReady"
-                                                         isrequired="true" normal-col-num="6" ismultipleselection>
+                                                         isrequired="true" normal-col-num="6" customlabel="Type" ismultipleselection>
             </vr-notification-vrnotifivationtype-settings>
         </vr-row>
     </vr-tab>
