--- a/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Directives/AccountBalanceNotification/Templates/AccountBalanceNotificationTypeSettingsTemplate.html
+++ b/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Directives/AccountBalanceNotification/Templates/AccountBalanceNotificationTypeSettingsTemplate.html
@@ -1,1 +1,16 @@
-﻿
+﻿<vr-columns colnum="{{ctrl.normalColNum}}">
+    <vr-textbox value="scopeModel.accountColumnHeader" label="Account Column Header" isrequired></vr-textbox>
+</vr-columns>
+<vr-columns colnum="{{ctrl.normalColNum}}">
+    <vr-select on-ready="scopeModel.onSelectorReady"
+               datasource="scopeModel.templateConfigs"
+               selectedvalues="scopeModel.selectedTemplateConfig"
+               datavaluefield="ExtensionConfigurationId"
+               datatextfield="Title"
+               label="Account Notification Type"
+               isrequired="true" hideremoveicon>
+    </vr-select>
+</vr-columns>
+<vr-directivewrapper ng-if="scopeModel.selectedTemplateConfig != undefined" directive="scopeModel.selectedTemplateConfig.Editor" vr-loader="scopeModel.isLoadingDirective"
+                     on-ready="scopeModel.onDirectiveReady" customvalidate="ctrl.customvalidate" normal-col-num="{{ctrl.normalColNum}}" isrequired="ctrl.isrequired">
+</vr-directivewrapper>
