--- a/Vanrise/Code/Vanrise.Notification.Web/VR_Notification/Views/VRNotification/VRNotificationLog.html
+++ b/Vanrise/Code/Vanrise.Notification.Web/VR_Notification/Views/VRNotification/VRNotificationLog.html
@@ -1,30 +1,32 @@
 ﻿<vr-panel ng-controller="VR_Notification_VRNotificationLogController" vr-loader="scopeModel.isLoading">
     <vr-form name="formFilter">
 
-        <vr-row>
-            <vr-columns width="fullrow">
-                <vr-choices-filter selectedindex="selectedFilternIndex">
-                    <vr-choice-filter isselected="basicSelected">Basic</vr-choice-filter>
-                    <vr-choice-filter isselected="advancedSelected">Advanced</vr-choice-filter>
-                </vr-choices-filter>
-            </vr-columns>
-        </vr-row>
-
-        <vr-row removeline>
-            <vr-notification-notificationtypesetting-selector on-ready="scopeModel.onVRNotificationTypeSettingsSelectorReady" selectedvalues="scopeModel.selectedNotificationType"
-                                                              onselectionchanged="scopeModel.onNotificationTypeSelectionChanged" normal-col-num="2" isrequired="true">
-            </vr-notification-notificationtypesetting-selector>
-            <span ng-show="scopeModel.isNotificationTypeSettingSelected">
-                <vr-notification-alertlevel-selector on-ready="scopeModel.onVRNotificationAlertlevelSelectorReady" normal-col-num="2"
-                                                     isloading="scopeModel.isAlertLevelSelectorLoading" ismultipleselection>
-                </vr-notification-alertlevel-selector>
-                <vr-columns colnum="2">
-                    <vr-textbox value="scopeModel.description" label="Description"></vr-textbox>
+        <div ng-hide="filterSectionCollapsed">
+            <vr-row>
+                <vr-columns width="fullrow">
+                    <vr-choices-filter selectedindex="selectedFilternIndex">
+                        <vr-choice-filter isselected="basicSelected">Basic</vr-choice-filter>
+                        <vr-choice-filter isselected="advancedSelected">Advanced</vr-choice-filter>
+                    </vr-choices-filter>
                 </vr-columns>
-                <vr-notification-notificationstatus-selector on-ready="scopeModel.onNotificationStatusSelectorReady" normal-col-num="2" ismultipleselection></vr-notification-notificationstatus-selector>
-            </span>
-            <vr-directivewrapper directive="scopeModel.selectedNotificationType.SearchDirective" on-ready="scopeModel.onSearchDirectiveReady"></vr-directivewrapper>
-        </vr-row>
+            </vr-row>
+
+            <vr-row removeline>
+                <vr-notification-notificationtypesetting-selector on-ready="scopeModel.onVRNotificationTypeSettingsSelectorReady" selectedvalues="scopeModel.selectedNotificationType"
+                                                                  onselectionchanged="scopeModel.onNotificationTypeSelectionChanged" normal-col-num="2" isrequired="true">
+                </vr-notification-notificationtypesetting-selector>
+                <span ng-show="scopeModel.isNotificationTypeSettingSelected">
+                    <vr-notification-alertlevel-selector on-ready="scopeModel.onVRNotificationAlertlevelSelectorReady" normal-col-num="2"
+                                                         isloading="scopeModel.isAlertLevelSelectorLoading" ismultipleselection>
+                    </vr-notification-alertlevel-selector>
+                    <vr-columns colnum="2">
+                        <vr-textbox value="scopeModel.description" label="Description"></vr-textbox>
+                    </vr-columns>
+                    <vr-notification-notificationstatus-selector on-ready="scopeModel.onNotificationStatusSelectorReady" normal-col-num="2" ismultipleselection></vr-notification-notificationstatus-selector>
+                </span>
+                <vr-directivewrapper directive="scopeModel.selectedNotificationType.SearchDirective" on-ready="scopeModel.onSearchDirectiveReady"></vr-directivewrapper>
+            </vr-row>
+        </div>
 
         <vr-row removeline>
             <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
