Removing Entity @AccountDetail
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40784

--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/Account/Templates/AccountGridTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/Account/Templates/AccountGridTemplate.html
@@ -5,9 +5,9 @@
              dataretrievalfunction="scopeModel.dataRetrievalFunction"
              pagingtype="'PagingOnScroll'"
              menuactions="scopeModel.menuActions"
-             idfield="Entity.AccountId"
-             defaultsortbyfieldname="'Entity.AccountId'" enableautoexport="true">
-    <vr-datagridcolumn headertext="'ID'" field="'Entity.AccountId'"></vr-datagridcolumn>
+             idfield="AccountId"
+             defaultsortbyfieldname="'AccountId'" enableautoexport="true">
+    <vr-datagridcolumn headertext="'ID'" field="'AccountId'"></vr-datagridcolumn>
     <vr-datagridcolumn ng-repeat="column in scopeModel.columns" columnattributes="column"></vr-datagridcolumn>
 
     <vr-datagridexpandablerow>
