UI Changes in Alert Level
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40793

--- a/Vanrise/Code/Vanrise.Notification.Web/VR_Notification/Directives/VRAlertLevel/Templates/AlertLevelGridTemplate.html
+++ b/Vanrise/Code/Vanrise.Notification.Web/VR_Notification/Directives/VRAlertLevel/Templates/AlertLevelGridTemplate.html
@@ -6,6 +6,7 @@
              idfield="Entity.VRAlertLevelId">
     <vr-datagridcolumn headertext="'Id'" field="'Entity.VRAlertLevelId'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Weight'" field="'Entity.Settings.Weight'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Alert Level Group'" field="'BusinessEntityDefinitionName'"></vr-datagridcolumn>
     <vr-datagridexpandablerow>
         <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
