--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/CarrierAccount/CarrierAccountEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/CarrierAccount/CarrierAccountEditor.html
@@ -30,7 +30,7 @@
                         </vr-columns>
                     </vr-row>
                 </vr-tab>
-                <vr-tab header="'Pricelist Settings'">
+                <vr-tab header="'Pricelist Settings'" show-tab="false">
                     <vr-row>
                         <vr-columns width="1/2row">
                             <businessprocess-bp-business-rule-set-selector on-ready="scopeModel.onBPBusinessRuleSetSelectorReady" label="Rule Set" ismultipleselection></businessprocess-bp-business-rule-set-selector>
