Editing LiveBalanceDataManager Adding AccountBalanceNotificationTypeSettings
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40819

--- a/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Directives/AccountBalanceNotification/Templates/AccountBalanceNotificationTypeSettingsTemplate.html
+++ b/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Directives/AccountBalanceNotification/Templates/AccountBalanceNotificationTypeSettingsTemplate.html
@@ -1,4 +1,7 @@
 ﻿<vr-columns colnum="{{ctrl.normalColNum}}">
+    <vr-switch value="scopeModel.showAccountTypeColumn" label="Show Account Type Column"></vr-switch>
+</vr-columns>
+<vr-columns colnum="{{ctrl.normalColNum}}">
     <vr-textbox value="scopeModel.accountColumnHeader" label="Account Column Header" isrequired></vr-textbox>
 </vr-columns>
 <vr-columns colnum="{{ctrl.normalColNum}}">
