--- a/Vanrise/Code/Vanrise.Notification.Web/VR_Notification/Directives/VRAlertRuleSettings/Templates/VRAlertRuleSettingsTemplate.html
+++ b/Vanrise/Code/Vanrise.Notification.Web/VR_Notification/Directives/VRAlertRuleSettings/Templates/VRAlertRuleSettingsTemplate.html
@@ -14,6 +14,7 @@
                          enabledraggablerow="true" hidegridmenu>
 
                 <vr-datagridcolumn headertext="'Threshold Descritpion'" field="'Entity.ThresholdDescription'" widthfactor="10"></vr-datagridcolumn>
+                <vr-datagridcolumn headertext="'Alert Level'" field="'Entity.AlertLevelName'" widthfactor="10"></vr-datagridcolumn>
                 <vr-datagridcolumn headertext="'Actions'" field="'Entity.ActionNames'" widthfactor="10"></vr-datagridcolumn>
                 <vr-datagridcolumn headertext="'Rollback Action'" field="'Entity.RollbackActionNames'" widthfactor="10"></vr-datagridcolumn>
             </vr-datagrid>
