--- a/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Directives/AccountBalanceNotification/Templates/AccountBalanceNotificationGridTemplate.html
+++ b/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Directives/AccountBalanceNotification/Templates/AccountBalanceNotificationGridTemplate.html
@@ -12,7 +12,9 @@
             <vr-datagridcolumn headertext="'Created'" field="'Entity.CreationTime'" type="'LongDatetime'" disablesorting="true" fixedwidth="'120'"></vr-datagridcolumn>
             <!--<vr-datagridcolumn headertext="'Description'" field="'Entity.Description'" disablesorting="true" widthfactor="'20'"></vr-datagridcolumn>-->
             <vr-datagridcolumn headertext="'Status'" field="'StatusDescription'" getcolor="scopeModel.getStatusColor" disablesorting="true" fixedwidth="'100'"></vr-datagridcolumn>
-            <vr-datagridcolumn headertext="scopeModel.AccountColumnHeader" field="'VRNotificationEventPayload.BusinessEntityDescription'" disablesorting="true"></vr-datagridcolumn>
+            
+            <vr-datagridcolumn headertext="'Account Type'" field="'VRNotificationEventPayload.AccountType'" disablesorting="true" ng-show="scopeModel.showAccountTypeColumn"></vr-datagridcolumn>
+            <vr-datagridcolumn headertext="scopeModel.accountColumnHeader" field="'VRNotificationEventPayload.BusinessEntityDescription'" disablesorting="true"></vr-datagridcolumn>
             <vr-datagridcolumn headertext="'Balance'" field="'VRNotificationEventPayload.CurrentBalance'" disablesorting="true" type="'Number'" fixedwidth="'80'" numberprecision="'NormalPrecision'"></vr-datagridcolumn>
             <vr-datagridcolumn headertext="'Threshold'" field="'VRNotificationEventPayload.Threshold'" disablesorting="true" type="'Number'" fixedwidth="'80'" numberprecision="'NoDecimal'"></vr-datagridcolumn>
             <vr-datagridcolumn headertext="'Currency'" field="'VRNotificationEventPayload.Currency'" disablesorting="true" fixedwidth="'60'"></vr-datagridcolumn>
