--- a/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Directives/MainExtensions/Account/Templates/VRAccountTypeSettings.html
+++ b/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Directives/MainExtensions/Account/Templates/VRAccountTypeSettings.html
@@ -4,26 +4,25 @@
             <vr-columns width="1/2row">
                 <vr-textbox value="scopeModel.name" label="Name" isrequired></vr-textbox>
             </vr-columns>
-            <vr-invtoaccbalancerelation-definition-selector on-ready="scopeModel.relationDefinitionSelectorReady" normal-col-num="6"></vr-invtoaccbalancerelation-definition-selector>
-        </vr-row>
-
-        <vr-accountusage-periodsettings on-ready="scopeModel.accountUsagePeriodSettingsReady"
-                                        isrequired="true"
-                                        normal-col-num="6">
-        </vr-accountusage-periodsettings>
-
-        <vr-row>
             <vr-accountbalance-billingtransactiontype-selector on-ready="scopeModel.onBillingTransactionTypeSelectorReady"
                                                                customlabel="Allowed Transaction Types"
                                                                normal-col-num="6"
                                                                isrequired="true"
                                                                ismultipleselection>
             </vr-accountbalance-billingtransactiontype-selector>
-
             <vr-columns width="1/2row">
                 <vr-timespan value="scopeModel.timeOffset" label="Time Offset"></vr-timespan>
             </vr-columns>
+            <vr-accountusage-periodsettings on-ready="scopeModel.accountUsagePeriodSettingsReady"
+                                            isrequired="true"
+                                            normal-col-num="6">
+            </vr-accountusage-periodsettings>
         </vr-row>
+       
+
+    </vr-tab>
+    <vr-tab header="'Relation Type'">
+        <vr-invtoaccbalancerelation-definition-selector on-ready="scopeModel.relationDefinitionSelectorReady" normal-col-num="6"></vr-invtoaccbalancerelation-definition-selector>
     </vr-tab>
     <vr-tab header="'Settings'">
         <vr-accountbalance-accounttype-extendedsettings on-ready="scopeModel.accountTypeSettingsReady" isrequired="true" normal-col-num="6"></vr-accountbalance-accounttype-extendedsettings>
