--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/BulkAction/Templates/BulkActionZoneFilterSelectiveTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/BulkAction/Templates/BulkActionZoneFilterSelectiveTemplate.html
@@ -1,21 +1,23 @@
-﻿<vr-row>
-    <vr-columns colnum="{{selectiveCtrl.normalColNum}}">
-        <vr-select label="Apply To"
-                   on-ready="scopeModel.onSelectorReady"
-                   datasource="scopeModel.extensionConfigs"
-                   selectedvalues="scopeModel.selectedExtensionConfig"
-                   datavaluefield="ExtensionConfigurationId"
-                   datatextfield="Title"
-                   onselectitem="scopeModel.onZoneFilterSelected"
-                   isrequired="selectiveCtrl.isrequired"
-                   hideremoveicon="selectiveCtrl.isrequired">
-        </vr-select>
-    </vr-columns>
-</vr-row>
-<span vr-loader="scopeModel.isLoadingDirective">
-    <vr-directivewrapper directive="scopeModel.selectedExtensionConfig.Editor"
-                         on-ready="scopeModel.onDirectiveReady"
-                         normal-col-num="{{selectiveCtrl.normalColNum / 2}}"
-                         isrequired="selectiveCtrl.isrequired">
-    </vr-directivewrapper>
-</span>
+﻿<div vr-disabled="scopeModel.isDisabled">
+    <vr-row>
+        <vr-columns colnum="{{selectiveCtrl.normalColNum}}">
+            <vr-select label="Apply To"
+                       on-ready="scopeModel.onSelectorReady"
+                       datasource="scopeModel.extensionConfigs"
+                       selectedvalues="scopeModel.selectedExtensionConfig"
+                       datavaluefield="ExtensionConfigurationId"
+                       datatextfield="Title"
+                       onselectitem="scopeModel.onZoneFilterSelected"
+                       isrequired="selectiveCtrl.isrequired"
+                       hideremoveicon="selectiveCtrl.isrequired">
+            </vr-select>
+        </vr-columns>
+    </vr-row>
+    <span vr-loader="scopeModel.isLoadingDirective">
+        <vr-directivewrapper directive="scopeModel.selectedExtensionConfig.Editor"
+                             on-ready="scopeModel.onDirectiveReady"
+                             normal-col-num="{{selectiveCtrl.normalColNum / 2}}"
+                             isrequired="selectiveCtrl.isrequired">
+        </vr-directivewrapper>
+    </span>
+</div>
