--- a/Vanrise/Code/Vanrise.Notification.Web/VR_Notification/Directives/VRNotification/Templates/VRNotificationComponentTypeSettingsTemplate.html
+++ b/Vanrise/Code/Vanrise.Notification.Web/VR_Notification/Directives/VRNotification/Templates/VRNotificationComponentTypeSettingsTemplate.html
@@ -17,4 +17,21 @@
             </vr-notification-vrnotifivationtype-settings>
         </vr-row>
     </vr-tab>
+
+    <vr-tab header="'Security'">
+        <vr-row>
+            <vr-columns width="fullrow">
+                <vr-section title="View">
+                    <vr-sec-requiredpermission-grid on-ready="scopeModel.onViewRequiredPermissionReady"></vr-sec-requiredpermission-grid>
+                </vr-section>
+            </vr-columns>
+        </vr-row>
+        <vr-row>
+            <vr-columns width="fullrow">
+                <vr-section title="Hide">
+                    <vr-sec-requiredpermission-grid on-ready="scopeModel.onHideRequiredPermissionReady"></vr-sec-requiredpermission-grid>
+                </vr-section>
+            </vr-columns>
+        </vr-row>
+    </vr-tab>
 </vr-tabs>
