--- a/Vanrise/Code/Vanrise.DataParser.Web/VR_DataParser/Elements/ParserType/Views/ParserTypeEditor.html
+++ b/Vanrise/Code/Vanrise.DataParser.Web/VR_DataParser/Elements/ParserType/Views/ParserTypeEditor.html
@@ -1,11 +1,18 @@
 ﻿<div vr-modalcontent ng-controller="VR_DataParser_ParserTypeEditorController" vr-loader="isLoading">
     <vr-modalbody>
         <vr-form name="formParserTypeEditor">
-            <vr-row removeline>
-                <vr-columns width="1/2row">
-                    <vr-textbox value="name" label="Name" isrequired></vr-textbox>
-                </vr-columns>
-            </vr-row>
+            <vr-tabs>
+                <vr-tab header="'Definition'">
+                    <vr-row removeline>
+                        <vr-columns width="1/2row">
+                            <vr-textbox value="scopeModel.name" label="Name" isrequired></vr-textbox>
+                        </vr-columns>
+                    </vr-row>
+                </vr-tab>
+                <vr-tab header="'Settings'">
+                    <vr-dataparser-parsertype-extendedsettings on-ready="scopeModel.onParserTypeExtendedSettingsSelectorReady" normal-col-num="6" isrequired="true"></vr-dataparser-parsertype-extendedsettings>
+                </vr-tabs>
+            
         </vr-form>
     </vr-modalbody>
     <div>
