--- a/Vanrise/Code/Vanrise.DataParser.Web/VR_DataParser/Elements/ParserType/Views/ParserTypeManagement.html
+++ b/Vanrise/Code/Vanrise.DataParser.Web/VR_DataParser/Elements/ParserType/Views/ParserTypeManagement.html
@@ -10,7 +10,7 @@
         <vr-row removeline>
             <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
                 <div transclude-to="buttons">
-                    <vr-button type="Search" formname="formFilter" data-onclick="search"></vr-button>
+                    <vr-button type="Search" formname="formFilter" data-onclick="searchClicked"></vr-button>
                     <vr-button type="Add" data-onclick="addNewParserType"></vr-button>
                 </div>
             </vr-actionbar>
