--- a/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Web/WhS_AccountBalance/Elements/AccountBalanceAlertThreshold/Customer/PrePaid/Template/CustomerFixedPercentageThreshold.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Web/WhS_AccountBalance/Elements/AccountBalanceAlertThreshold/Customer/PrePaid/Template/CustomerFixedPercentageThreshold.html
@@ -1,3 +1,7 @@
 ﻿<vr-columns colnum="{{ctrl.normalColNum}}">
     <vr-textbox type="number" label="Threshold" value="scopeModel.threshold" isrequired="true"></vr-textbox>
 </vr-columns>
+<vr-common-currency-selector on-ready="scopeModel.onCurrencySelectorReady" 
+                             selectedvalues="scopeModel.currencySelectedValues" 
+                             isrequired="true" normal-col-num="4">
+</vr-common-currency-selector>
