Adding Currency to Alert Thresholds
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40856

--- a/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Directives/AccountBalanceNotification/Templates/AccountBalanceNotificationGridTemplate.html
+++ b/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Directives/AccountBalanceNotification/Templates/AccountBalanceNotificationGridTemplate.html
@@ -16,7 +16,7 @@
             <vr-datagridcolumn headertext="'Account Type'" field="'VRNotificationEventPayload.AccountType'" disablesorting="true" ng-show="scopeModel.showAccountTypeColumn"></vr-datagridcolumn>
             <vr-datagridcolumn headertext="scopeModel.accountColumnHeader" field="'VRNotificationEventPayload.BusinessEntityDescription'" disablesorting="true"></vr-datagridcolumn>
             <vr-datagridcolumn headertext="'Balance'" field="'VRNotificationEventPayload.CurrentBalance'" disablesorting="true" type="'Number'" fixedwidth="'80'" numberprecision="'NormalPrecision'"></vr-datagridcolumn>
-            <vr-datagridcolumn headertext="'Threshold'" field="'VRNotificationEventPayload.Threshold'" disablesorting="true" type="'Number'" fixedwidth="'80'" numberprecision="'NoDecimal'"></vr-datagridcolumn>
+            <vr-datagridcolumn headertext="'Threshold'" field="'VRNotificationEventPayload.Threshold'" disablesorting="true" type="'Number'" fixedwidth="'80'" numberprecision="'NormalPrecision'"></vr-datagridcolumn>
             <vr-datagridcolumn headertext="'Currency'" field="'VRNotificationEventPayload.Currency'" disablesorting="true" fixedwidth="'60'"></vr-datagridcolumn>
             <vr-datagridcolumn headertext="'Actions'" field="'ActionNames'" disablesorting="true"></vr-datagridcolumn>
         </vr-datagrid>
