--- a/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/Runtime/AnalyticReport/RealTime/Templates/RealTimeAnalyticReportRuntimeTemplates.html
+++ b/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/Runtime/AnalyticReport/RealTime/Templates/RealTimeAnalyticReportRuntimeTemplates.html
@@ -81,7 +81,7 @@
 <div>
     <vr-row>
         <vr-columns ng-repeat="widget in scopeModel.widgets" colnum="{{widget.columnWidth.numberOfColumns}}">
-            <vr-section title="{{widget.settings.WidgetTitle}}" ng-if="widget.settings.ShowTitle" vr-loader="scopeModel.isLoadingDimensionDirective">
+            <vr-section title="{{widget.settings.WidgetTitle}}" ng-if="widget.settings.ShowTitle" vr-loader="scopeModel.isLoadingDimensionDirective" collapsible>
                 <vr-directivewrapper directive="widget.runtimeEditor" on-ready="widget.onDirectiveReady"></vr-directivewrapper>
             </vr-section>
             <span style="padding-right: 3px;" ng-if="!widget.settings.ShowTitle" vr-loader="scopeModel.isLoadingDimensionDirective">
