set tree dynamic height
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40861

--- a/TOneV2/Code/TOneV2/TOne.WhS.CodePreparation.Web/WhS_CodePreparation/Views/CodePreparationManagement.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.CodePreparation.Web/WhS_CodePreparation/Views/CodePreparationManagement.html
@@ -27,7 +27,7 @@
     </vr-row>
     <vr-row>
         <vr-columns width="1/4row" ng-show="selectedSellingNumberPlan!=undefined" vr-loader="isLoadingCountries">
-            <div style="max-height:700px;overflow-y:auto">
+            <div ng-style="{'height':treeHeight,'overflow-y':'auto'}">
                 <vr-treeview on-ready="countriesTreeReady"
                              datachildrenfield="effectiveZones"
                              datavaluefield="nodeId"
