Made the BED of the RateBulkAction optional
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40862

--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Extensions/BulkAction/ActionTypes/Templates/RateBulkActionTypeTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Extensions/BulkAction/ActionTypes/Templates/RateBulkActionTypeTemplate.html
@@ -31,7 +31,7 @@
 	</div>
 	<div style="width: 100%; display: inline-block">
 		<vr-columns colnum="{{rateBulkActionTypeCtrl.normalColNum}}">
-			<vr-datetimepicker type="date" label="BED" value="scopeModel.beginEffectiveDate" onvaluechanged="scopeModel.onBulkActionChanged" isrequired="rateBulkActionTypeCtrl.isrequired"></vr-datetimepicker>
+			<vr-datetimepicker type="date" label="BED" value="scopeModel.beginEffectiveDate" onvaluechanged="scopeModel.onBulkActionChanged"></vr-datetimepicker>
 		</vr-columns>
 	</div>
 </div>
