refactoring and changing names
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40864

--- a/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Web/WhS_AccountBalance/Elements/AccountBalanceActions/SendCustomerEmailAction/Directives/Templates/SendCustomerEmailAction.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Web/WhS_AccountBalance/Elements/AccountBalanceActions/SendCustomerEmailAction/Directives/Templates/SendCustomerEmailAction.html
@@ -1,13 +1,13 @@
 ﻿<vr-row>
     <vr-columns colnum="6">
         <vr-common-mailmessagetemplate-selector on-ready="scopeModel.onAccountMailMessageTemplateSelectorReady"
-                                                customlabel="Account Mail Message Template"
+                                                customlabel="Account Mail Template"
                                                 isrequired="true">
         </vr-common-mailmessagetemplate-selector>
     </vr-columns>
     <vr-columns colnum="6">
         <vr-common-mailmessagetemplate-selector on-ready="scopeModel.onProfileMailMessageTemplateSelectorReady"
-                                                customlabel="Profile Mail Message Template"
+                                                customlabel="Profile Mail Template"
                                                 isrequired="true">
         </vr-common-mailmessagetemplate-selector>
     </vr-columns>
